--- a/public/survey.html
+++ b/public/survey.html
@@ -92,7 +92,7 @@
       display: none;
     }
 
-    /* -------- SPINNER -------- */
+    /* Spinner */
     #loadingWrapper {
       display: none;
       text-align: center;
@@ -113,7 +113,6 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-    /* -------------------------- */
 
   </style>
 </head>
@@ -144,32 +143,27 @@
   <p><b>Q1. Which audio artifact is most prominent?</b></p>
 
   <div class="artifact-option">
-    <input type="radio" name="artifact" value="Robot">
-    Robot-like voice
+    <input type="radio" name="artifact" value="Robot"> Robot-like voice
     <div class="definition">Speech sounds mechanical, metallic, or synthetic.</div>
   </div>
 
   <div class="artifact-option">
-    <input type="radio" name="artifact" value="Pauses">
-    Unnatural pauses
+    <input type="radio" name="artifact" value="Pauses"> Unnatural pauses
     <div class="definition">Unexpected breaks disrupting natural speech flow.</div>
   </div>
 
   <div class="artifact-option">
-    <input type="radio" name="artifact" value="Repetition">
-    Word repetition
+    <input type="radio" name="artifact" value="Repetition"> Word repetition
     <div class="definition">Repeated words or phrases not typical of natural speech.</div>
   </div>
 
   <div class="artifact-option">
-    <input type="radio" name="artifact" value="Prosody">
-    Prosody mismatch
+    <input type="radio" name="artifact" value="Prosody"> Prosody mismatch
     <div class="definition">Unnatural rhythm, pitch, stress, or intonation.</div>
   </div>
 
   <div class="artifact-option">
-    <input type="radio" name="artifact" value="Noise">
-    Background noise
+    <input type="radio" name="artifact" value="Noise"> Background noise
     <div class="definition">Unwanted static, distortion, or environmental sound.</div>
   </div>
 
@@ -221,26 +215,13 @@
 const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwTbB2bT7mY7O258gYSew3M_igS3-EWBbBzcF-BSWr9netV_6sFI2r1ho6TE9mp9kzI/exec";
 
 let audioFiles = [
-  "audio/DF_E_2000013.flac",
-  "audio/DF_E_2000024.flac",
-  "audio/DF_E_2000026.flac",
-  "audio/DF_E_2000042.flac",
-  "audio/DF_E_2000048.flac",
-  "audio/DF_E_2000053.flac",
-  "audio/DF_E_2000055.flac",
-  "audio/DF_E_2000075.flac",
-  "audio/DF_E_2000079.flac",
-  "audio/DF_E_2000091.flac",
-  "audio/DF_E_2000100.flac",
-  "audio/DF_E_2000102.flac",
-  "audio/DF_E_2000508.flac",
-  "audio/DF_E_2000524.flac",
-  "audio/DF_E_2749699.flac",
-  "audio/DF_E_2749700.flac",
-  "audio/DF_E_2749711.flac",
-  "audio/DF_E_2749732.flac",
-  "audio/DF_E_2749783.flac",
-  "audio/DF_E_2749817.flac"
+  "audio/DF_E_2000013.flac","audio/DF_E_2000024.flac","audio/DF_E_2000026.flac",
+  "audio/DF_E_2000042.flac","audio/DF_E_2000048.flac","audio/DF_E_2000053.flac",
+  "audio/DF_E_2000055.flac","audio/DF_E_2000075.flac","audio/DF_E_2000079.flac",
+  "audio/DF_E_2000091.flac","audio/DF_E_2000100.flac","audio/DF_E_2000102.flac",
+  "audio/DF_E_2000508.flac","audio/DF_E_2000524.flac","audio/DF_E_2749699.flac",
+  "audio/DF_E_2749700.flac","audio/DF_E_2749711.flac","audio/DF_E_2749732.flac",
+  "audio/DF_E_2749783.flac","audio/DF_E_2749817.flac"
 ];
 
 function shuffle(array) {
@@ -287,18 +268,9 @@ async function submitAndNext() {
   const confidence = document.querySelector('input[name="confidence"]:checked');
   const difficulty = document.querySelector('input[name="difficulty"]:checked');
 
-  if (!artifact) {
-    document.getElementById("artifactError").style.display = "block";
-    return;
-  }
-  if (!confidence) {
-    document.getElementById("confidenceError").style.display = "block";
-    return;
-  }
-  if (!difficulty) {
-    document.getElementById("difficultyError").style.display = "block";
-    return;
-  }
+  if (!artifact) { document.getElementById("artifactError").style.display = "block"; return; }
+  if (!confidence) { document.getElementById("confidenceError").style.display = "block"; return; }
+  if (!difficulty) { document.getElementById("difficultyError").style.display = "block"; return; }
 
   nextBtn.disabled = true;
   loadingWrapper.style.display = "block";
@@ -311,13 +283,15 @@ async function submitAndNext() {
     comments: document.getElementById("comments").value
   };
 
-  await fetch(APPS_SCRIPT_URL, {
+  // Move immediately
+  currentIndex++;
+
+  // Send in background
+  fetch(APPS_SCRIPT_URL, {
     method: "POST",
     mode: "no-cors",
     body: JSON.stringify(payload)
   });
-
-  currentIndex++;
 
   if (currentIndex >= audioFiles.length) {
     window.location.href = "thankyou.html";
@@ -332,6 +306,12 @@ async function submitAndNext() {
   document.getElementById("comments").value = "";
 
   updateProgress();
+
+  // Preload next audio
+  if (currentIndex + 1 < audioFiles.length) {
+    const preload = new Audio();
+    preload.src = audioFiles[currentIndex + 1];
+  }
 
   nextBtn.disabled = false;
   loadingWrapper.style.display = "none";
